Fixed alignment; needed margin instead of padding.

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -63,7 +63,7 @@ body {
 
 .nav-scroller .nav {
   display: flex;
-  flex-wrap: nowrap;
+  flex-wrap: wrap;
   padding-bottom: 1rem;
   margin-top: 100px;
   overflow-x: auto;
@@ -74,56 +74,55 @@ body {
 
 .grid {
   display: grid;
-  grid-template: auto 1fr 1fr auto /* row */ / 200px auto 200px /* column */;
-  gap: 5px;
+  grid-template: 10px 1fr 1fr 1fr 100px /* row */ / 200px 1fr 200px /* column */;
   /* background: silver; */
-  height: 90vh;
+  align-self: justify; 
+  height: 85vh;
+  margin-bottom: 10px;
 }
 
 header,
 footer {
   grid-column: span 4;
   min-width: 500px;
+  font-size: 1.5rem;
 }
 header,
 aside,
 article,
 footer {
-  border-style: solid;
-  border-color: black;
   background: #323a45;
-  font-size: 1.5rem;
-  /* margin: 2px; */
   color: white;
-  padding: 5px;
   display: flex;
+  border: 5px solid black;
+  margin: 5px;
 }
 
-header {
-  padding-top: 10px;
-}
+/* header {
+  padding-top: 10px; Keeps text from going under nav bar when scrolled all the way up. } */
 
 article {
   padding: 30px;
-  grid-column: 2;
-  font-size: 1.5rem;
+  grid-column: 2 / 3;
+  font-size: 1rem;
+  margin: 5px;
 }
 
 aside {
   grid-column: 1, 3;
-  grid-row: span 3;
+  grid-row: span 2;
 }
 
-/* Box around video */
+/* Box around video 
 
 .container {
-  align-items: stretch;
-}
+  align-items: justify;
+} */
 
-.container2 {
+/* .container2 {
   padding: 10px;
 
-}
+} */
 
 /*
  * Custom translucent site header
